# note-cli

./: .gitignore  Cargo.toml  README.md  note.toml.template
src/: config.rs  highlighter.rs  main.rs  parser.rs  renderer.rs  scanner.rs  search.rs  server.rs
static/: lightbox.js  search.js  style.css
templates/: base.html  category.html  home.html  page.html
