[package]
name = "note-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "note-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
walkdir = "2"
pulldown-cmark = "0.11"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "html", "regex-onig"] }
tera = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
rayon = "1"
tiny_http = "0.12"
anyhow = "1"
regex = "1"

[dev-dependencies]
tempfile = "3"
